fixed the navbar so it is part of normal flow of the document so it doesnt overlap all the pages

--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -10,9 +10,9 @@ body {
 
 .navbar {
   background-color: white;
-  position: fixed;
+  /* position: fixed;
   top: 0;
-  left: 0;
+  left: 0; */
   width: 100%;
   height: 2rem%;
   z-index: 1000;
